--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 
 @import "componets/button";
 @import "componets/card";
+@import "componets/impo.scss";
 
 @import "layout/headers";
 @import "layout/footer";
