--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,6 +5,7 @@
 @import "base/animation";
 @import "base/base";
 @import "base/typograph";
+@import "base/effect.scss";
 
 @import "componets/button";
 @import "componets/card";
@@ -12,3 +13,4 @@
 
 @import "layout/headers";
 @import "layout/footer";
+
