--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,6 +6,8 @@
 @import "base/base";
 @import "base/typograph";
 @import "base/effect.scss";
+@import "base/conc.scss";
+@import "base/care.scss";
 
 @import "componets/button";
 @import "componets/card";
