--- a/src/sass/base/effect.scss
+++ b/src/sass/base/effect.scss
@@ -1,6 +1,6 @@
 .effect-container{
     height: 100%;
-    background-color: blanchedalmond;
+    // background-color: rgba(0, 0, 255, 0.767);
    
 }
 .picc-slider{
@@ -19,11 +19,12 @@
     img{
         width: 100%;
         margin-left: 0%;
-        border-radius: 2rem;
+        border-radius: 20px;
     }
     h3{
         font-size: 2rem;
         text-align: center;
+        padding: 20px;
     }
 }
 
@@ -31,7 +32,7 @@
     display: flex;
     justify-content: space-between;
     gap: 2rem;
-    padding: 1rem;
+   
     p{
         font-size: 1.5rem;
         
@@ -42,8 +43,9 @@
         border-radius: 2rem;
     }
     h3{
-        font-size: 2rem;
-        text-align: center;
+        font-size: 20px;
+        text-align: center; 
+        padding: 20px;
     }
 }
 
@@ -60,14 +62,21 @@
         width: 100%;
         margin-left: 0%;
         border-radius: 2rem;
+        height: 50vh;
         
     }
     h3{
         font-size: 2rem;
         text-align: center;
+        padding: 20px;
     }
 }
 .eff{
     width: 100%;
     
+}
+h1{
+    background-color: rgba(0, 0, 255, 0.7);
+    padding: 10px;
+    color:white;
 }
