--- a/src/sass/layout/headers.scss
+++ b/src/sass/layout/headers.scss
@@ -1,24 +1,24 @@
 nav{
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(0, 128, 0, 0.804);
     position: sticky;
     margin-top: 0%;
     padding-top: 0%;
-    box-shadow: 3px 3px rgb(105, 104, 104);
+    box-shadow: 1px 2px 1px rgb(105, 104, 104);
     
 }
-.heading{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+// .heading{
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
 
-}
+// }
 ul{
     display: flex;
-    justify-content: space-between;
-    gap: 2rem;
-     margin-right: 5rem;
-     padding: 2rem;
-    
+    // justify-content: space-between;
+    gap: 20px;
+    //  margin-right: 5rem;
+     padding: 10px;
+    margin-left: 25%;
 }
 li{
     list-style-type: none;
@@ -26,15 +26,16 @@ li{
    
 }
 li a{
-    color: rgb(85, 74, 74);
+   color: white;
     text-decoration: none;
-     align-items: center;
+     text-align: center;
+    //  margin-left: 20px;
     }
-    img{
-      width: 40%;
-      margin-left: 5rem;
-      align-items: center;
-    }
+    // img{
+    //   width: 20%;
+    //   margin-left: 5rem;
+    //   align-items: center;
+    // }
     
     // @media(max-width:1330px){
     //     li{
