--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 @import "base/effect.scss";
 @import "base/conc.scss";
 @import "base/care.scss";
+@import "base/imp.scss";
 
 @import "componets/button";
 @import "componets/card";
@@ -15,5 +16,6 @@
 
 @import "layout/headers";
 @import "layout/footer";
+@import "layout/moreimpo.scss";
 
 
